Updates modules.md
Auto commit by GitBook Editor